# rpi-navtex

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.github/workflows/: build-image.yml  build-os-image.yml  docker-publish.yml
.planning/: ROADMAP.md  STATE.md
api/: Dockerfile  alembic.ini  requirements.txt  start.sh
api/alembic/: env.py
api/src/: config_schema.py  database.py  main.py  models.py  push_utils.py  schemas.py  security.py
api/tests/: conftest.py  test_api_messages.py  test_config.py  test_db_setup.py  test_models.py  test_notifications.py  test_push_filters.py  test_push_trigger.py  test_push_utils.py
docs/plans/: 2026-04-25-navtex-foundation-plan.md  2026-04-25-navtex-receiver-design.md  2026-04-25-sdr-dsp-pipeline.md  2026-04-26-broker-persistence.md  2026-04-26-frontend-pwa.md  2026-04-26-sdr-dsp-api-integration.md  2026-04-27-bias-t-ui-design.md  2026-04-27-bias-t-ui-fix-plan.md  roadmap.md  (+1 more)
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
image/: .gitignore  build.sh  config  rpi-imager.json.template
sdr-dsp/: CMakeLists.txt  Dockerfile  entrypoint.sh
sdr-dsp/src/: config.h  control_server.cpp  control_server.h  decoder.cpp  decoder.h  fir1.cpp  fir1.h  fir2.cpp  fir2.h  fir3.cpp  fir3.h  iq_queue.h  main.cpp  message_publisher.cpp  message_publisher.h  nav_b_sm.cpp  nav_b_sm.h
sdr-dsp/tests/: test_decoder.cpp  test_fir.cpp  test_fir2.cpp  test_fir3.cpp  test_iq_queue.cpp  test_nav_b_sm.cpp  test_publisher.cpp
(+72 files in other folders)
